# vhs-86

./: .clawd-todos.json  .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md
.claw/sessions/edc05c7d2d4c1df7/: session-1781282971971-0.jsonl  session-1781285042529-0.jsonl
.github/workflows/: ci.yml
.omo/run-continuation/: ses_14098a1e0ffeApPBzvPwRgodXW.json  ses_157c3b2caffeXf8PO1TGfzE21f.json  ses_157cd727cffeAKqZZ9GtY2toUV.json  ses_158cf78f6ffeP0hJCpyXgog63H.json
benches/: app_benchmarks.rs
man/: vhs-86.1  vhs-86.1.md
packaging/aur/: PKGBUILD
packaging/chocolatey/: vhs-86.nuspec
packaging/homebrew/: vhs-86.rb
scripts/: build-all.sh  build-linux.sh  build-macos.sh  build-windows.sh  cargo-publish-check.sh
src/: archive.rs  batch.rs  config.rs  crash_reporter.rs  disk_usage.rs  files.rs  git.rs  keybindings.rs  lib.rs  main.rs  permissions.rs  plugins.rs  preview.rs  profiling.rs  remote.rs  search.rs  theme.rs
tests/: integration_tests.rs
