[package]
name = "vhs-86"
version = "0.7.0"
edition = "2024"
authors = ["synthalorian"]
description = "A retro terminal file manager with synthwave aesthetics"
license = "MIT"
repository = "https://github.com/synthalorian/vhs-86"
keywords = ["terminal", "file-manager", "tui", "synthwave", "retro"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
walkdir = "2"
chrono = "0.4"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
syntect = "5"
image = "0.25"
git2 = "0.20"
dirs = "6"
base64 = "0.22"
zip = "2"
tar = "0.4"
flate2 = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
lazy_static = "1"
extism = "1"
serde_json = "1"
clap = { version = "4", features = ["derive", "cargo", "help"] }
clap_mangen = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "app_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.bench]
debug = true
